# pydlock

./: .gitignore  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  FUTURE.md  FUTURE.rst  IMPLEMENTATION_PLAN.md  LICENSE  LOOP_LEARNINGS.md  README.md  README.rst  SECURITY.md  build.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
brand/: OFL.txt  README.md  build_raster_lockup.py
docs/: api.rst  conf.py  index.rst  release-checklist.md  requirements.txt
docs/audits/: pydlock-2026-07-08.md
docs/design/: 2026-07-08-pydlock-v2.md
docs/plans/: 2026-07-08-repo-improvement-plan.md
pydlock/: __init__.py  __main__.py  constants.py  version.json
pydlock.egg-info/: PKG-INFO
tests/: test_cli_errors.py  test_durability.py  test_envelope_strict.py  test_fs_safety.py  test_main.py  test_privacy_scan.py  test_pydlock.py  test_release_tools.py
tests/fixtures/: PROVENANCE.md  v1_legacy.locked
tools/: check_release_consistency.py  install_smoke.py  privacy_scan.py
