[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydlock"
dynamic = ["version"]
description = "Dead-simple password-based file encryption for the command line and Python (scrypt + Fernet)."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Erick Shepherd", email = "Contact@ErickShepherd.com" },
]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "encryption", "decryption", "file encryption", "password",
    "cryptography", "scrypt", "Fernet", "AES", "symmetric encryption",
    "command line",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    # The core v1 bug: no declared runtime dependency, so `pip install pydlock`
    # broke on first use. The floor tracks the versions the Phase-D CI matrix
    # (item 8, Python 3.10-3.13) is expected to pass against; loosening below
    # this is an out-of-loop decision.
    "cryptography>=43.0",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
pydlock = "pydlock.__main__:main"

[project.urls]
Homepage = "https://github.com/ErickShepherd/pydlock"
Documentation = "https://pydlock.readthedocs.io/en/stable/"
Source = "https://github.com/ErickShepherd/pydlock"
Changelog = "https://github.com/ErickShepherd/pydlock/releases"
Issues = "https://github.com/ErickShepherd/pydlock/issues"

[tool.hatch.version]
path = "pydlock/constants.py"

[tool.hatch.build.targets.wheel]
packages = ["pydlock"]

# The source distribution ships ONLY the intentional source-release set: the
# package, its offline test suite, and the top-level project/legal/security
# metadata. Internal development artifacts — implementation plans, loop-learning
# records, audit ledgers, design notes, the release runbook, the Sphinx docs
# tree, and the development-only brand sources (large PNGs + a vendored TTF) —
# are deliberately EXCLUDED so they are never distributed with the package. This
# is an allowlist (`include`): anything not named here is left out of the sdist,
# so a newly added internal file cannot silently start shipping.
[tool.hatch.build.targets.sdist]
include = [
    "/pydlock",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/CITATION.cff",
    "/SECURITY.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Permissive: keep ruff's default lint set (pyflakes `F` + the core pycodestyle
# `E4`/`E7`/`E9` groups), which catches real problems -- unused imports,
# undefined names, comparison/statement bugs -- without fighting this
# codebase's deliberate aligned-assignment and blank-line style (E1/E2 spacing
# rules and E501 line length are intentionally NOT enforced).
